{{$NEXT}}

0.023     2018-01-21 11:31:20+11:00 Australia/Melbourne
- Bugfix: Updated several agent endpoints to use PUT instead of GET.
- Bugfix: Setting a value to 0 in the KV store would store an empty
  string.  Now it stores 0.

0.022     2017-08-03 17:00:44+10:00 Australia/Melbourne
- Bugfix: get_all now returns empty array when no nodes found

0.021     2017-07-21 17:54:30+10:00 Australia/Melbourne
- Support setting and getting null values in the KV store

0.020     2016-12-20 20:59:28+11:00 Australia/Melbourne
- Support hash-to-object coercion in check_register and
  service_register.
- Added support for service_id, status, and
  deregister_critical_service_after to Consul::Check.
- Added Consul::Check::HTTP, Consul::Check::TCP, and
  Consul::Check::Docker.
- Fixed the port argument and added the address argument in
  Consul::Service.

0.019     2016-10-21 19:15:29+11:00 Australia/Melbourne
- Add a token argument which is used to set the X-Consul-Token
  HTTP header.
- Implement the ACL API.

0.018     2016-09-23 13:47:43+10:00 Australia/Melbourne
- Fixup error_cb test to work even when there is an existing
  Consul agent listening on port 8500.
- Update for Test-Consul 0.005 (Consul 0.6.1 through 0.7.0+)

0.017     2016-09-22 23:24:53+10:00 Australia/Melbourne
- Add support for enableTagOverride attribute on services
- Add support for ServiceAddress attribute on catalog entries

0.016     2016-02-19 08:54:46+11:00 Australia/Melbourne
- Error callback for individual endpoint methods
- Update for Test-Consul 0.003 (Consul 0.6.3)

0.015     2015-12-08 16:59:19+11:00 Australia/Melbourne
- Fix session/info on nonexistent session (Consul 0.6.0)

0.014     2015-12-07 17:05:57+11:00 Australia/Melbourne
- Implement Sessions API

0.013     2015-11-25 21:20:44+11:00 Australia/Melbourne
- Never call the endpoint callback after calling the error callback

0.012     2015-11-25 20:02:06+11:00 Australia/Melbourne