@@ -1,7 +1,7 @@
 name    = Consul
-author  = Robert Norris <rob@eatenbyagrue.org>
+author  = Robert Norris <robn@robn.io>
 license = Perl_5
-copyright_holder = Robert Norris
+copyright_holder = Rob N ★
 copyright_year = 2015
 
 version = 0.023
@@ -11,6 +11,7 @@ version = 0.023
 -remove = GatherDir
 [GatherDir]
 exclude_filename = Makefile.PL
+exclude_filename = LICENSE
 
 [AutoPrereqs]
 [PkgVersion]
@@ -34,3 +35,4 @@ filename = README.md
 
 [CopyFilesFromBuild]
 copy = Makefile.PL
+copy = LICENSE
