@@ -1,4 +1,5 @@
 {{$NEXT}}
+- Bugfix: Not all meta fields are required.
 
 0.023     2018-01-21 11:31:20+11:00 Australia/Melbourne
 - Bugfix: Updated several agent endpoints to use PUT instead of GET.
